--- a/package.json
+++ b/package.json
@@ -43,11 +43,16 @@
 	],
 	"dependencies": {
 		"align-text": "^1.0.2",
+		"ansi-escapes": "^3.1.0",
 		"ansi-regex": "^3.0.0",
 		"array-uniq": "^1.0.3",
+		"canvas": "^2.0.0-alpha.12",
+		"chalk": "^2.3.2",
 		"deepmerge": "^2.1.0",
 		"itermcolors-to-hex": "^1.0.1",
-		"super-split": "^1.1.0"
+		"strip-indent": "^2.0.0",
+		"super-split": "^1.1.0",
+		"term-img": "^2.1.0"
 	},
 	"devDependencies": {
 		"ava": "^0.25.0",
