Update travis plugin

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ test:
   - "yarn test"
 notifications:
 after_success: 'yarn run coveralls'
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - libcairo2-dev
+      - libjpeg8-dev
+      - libpango1.0-dev
+      - libgif-dev
+      - g++-4.9
+env:
+  - CXX=g++-4.9
+sudo: false
