Add Patreon badge

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "ansi-to",
 	"main": "ansi-to",
-	"version": "1.4.0",
-	"description": "> 😹  export ANSI to HTML, SVG, PNG, w/ iTerm2 color support",
+	"version": "1.5.0",
+	"description": "😹  export ANSI to HTML, SVG, PNG, w/ iTerm2 color support",
 	"license": "MIT",
 	"repository": "F1LT3R/ansi-to",
 	"author": {
